🐛 fix: fix horizontal scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,9 @@
 * {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+html {
+  overflow-x: hidden;
+}
 
 body {
   background: linear-gradient(
@@ -15,7 +18,6 @@ body {
     )
     fixed;
   background-color: rgb(26, 8, 66);
-  overflow-x: hidden;
 }
 
 .header-dropdown {
